Telephony: Fix sim_refresh as per ril v6
Change-Id: I7333539e4061ff277c5d7aaa41ae913b1ed3790c

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -718,4 +718,8 @@
     <!-- Default network policy warning threshold, in megabytes. -->
     <integer name="config_networkPolicyDefaultWarning">2048</integer>
 
+    <!-- Boolean indicating if RADIO POWER OFF should be skipped on receiving SIM
+         REFRESH with RESET-->
+    <!-- This will be handled by modem if it is true-->
+    <bool translatable="false" name="skip_radio_power_off_on_sim_refresh_reset">true</bool>
 </resources>
