--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -162,9 +162,9 @@
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
          Wifi interfaces.  If the device doesn't want to support tethering over Wifi this
-         should be empty.  An example would be "softap.*" -->
+         should be empty.  An example would be "wlan0" -->
     <string-array translatable="false" name="config_tether_wifi_regexs">
-            <item>"softap.*"</item>
+            <item>"wlan0"</item>
     </string-array>
 
     <!-- List of regexpressions describing the interface (if any) that represent tetherable
