--- a/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
+++ b/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
@@ -3,7 +3,7 @@
 /* apps/common/assets/default/default/skins/StatusBar.xml
 **
 ** Copyright 2011 The Android Open Source Project
-** Copyright (c) 2011 Code Aurora Forum. All rights reserved.
+** Copyright (c) 2011-2012 Code Aurora Forum. All rights reserved.
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -84,6 +84,11 @@
                 android:layout_width="wrap_content"
                 android:layout_gravity="right|bottom"
                 />
+            <ImageView
+                android:id="@+id/no_sim_slot2"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                />
         </FrameLayout>
     </FrameLayout>
     <View
@@ -122,6 +127,11 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_gravity="right|bottom"
+                />
+            <ImageView
+                android:id="@+id/no_sim"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
                 />
         </FrameLayout>
     </FrameLayout>
