CAF:QRD_QI:SETTINGS:SIMSPN:none:add SPN
	Component Name: SETTINGS
	Feature Name: SIMSPN
	Fixed CRs: none
	Targets: msm7627A_sku1,msm7627A_sku3
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: sun meng

Change-Id: I7658ac8ef9f29d65e32701399bf2e0d5c5572641

--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-/* //device/apps/common/assets/res/any/colors.xml
+/* Copyright (C) 2012, Code Aurora Forum. All rights reserved.
 **
 ** Copyright 2006, The Android Open Source Project
 **
@@ -511,4 +511,15 @@
         <item>@null</item>
     </array>
 
+    <string-array name="origin_carrier_names">
+        <item>China Mobile</item>
+        <item>China Unicom</item>
+        <item>China Telecom</item>
+    </string-array>
+
+    <string-array translatable="true" name="locale_carrier_names">
+        <item>China_Mobile</item>
+        <item>China_Unicom</item>
+        <item>China_Telecom</item>
+    </string-array>
 </resources>
