--- a/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
+++ b/packages/SystemUI/res/layout/msim_signal_cluster_view.xml
@@ -29,7 +29,7 @@
         android:id="@+id/wifi_combo"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-
+        android:layout_marginRight="6dp"
         >
         <ImageView
             android:id="@+id/wifi_signal"
