CAF:QRD_QI:ANNUCIATOR:NEW_STATUSBAR_STYLE:none:Restructure the view of signal icons on status bar
	Component Name: ANNUCIATOR
	Feature Name: NEW_STATUSBAR_STYLE
	Fixed CRs: none
	Targets: msm7627A_sku1,msm7627A_sku3
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: lv yang

Change-Id: I7b2f16077fe50a4a237a78ed5de040c90f62c11d

--- a/packages/SystemUI/res/layout/msim_status_bar.xml
+++ b/packages/SystemUI/res/layout/msim_status_bar.xml
@@ -3,7 +3,7 @@
 /* apps/common/assets/default/default/skins/StatusBar.xml
 **
 ** Copyright 2006 The Android Open Source Project
-** Copyright (c) 2011 Code Aurora Forum. All rights reserved.
+** Copyright (c) 2011-2012 Code Aurora Forum. All rights reserved.
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
@@ -58,7 +58,7 @@
             android:orientation="horizontal"
             android:gravity="center"
             >
-            <include layout="@layout/msim_signal_cluster_view"
+            <LinearLayout
                 android:id="@+id/msim_signal_cluster"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
