--- a/core/res/res/xml/storage_list.xml
+++ b/core/res/res/xml/storage_list.xml
@@ -2,6 +2,7 @@
 <!--
 **
 ** Copyright 2011, The Android Open Source Project
+** Copyright (c) 2012, Code Aurora Forum. All rights reserved.
 **
 ** Licensed under the Apache License, Version 2.0 (the "License")
 ** you may not use this file except in compliance with the License.
@@ -35,6 +36,15 @@
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- removable is not set in nosdcard product -->
     <storage android:mountPoint="/mnt/sdcard"
-    		 android:storageDescription="@string/storage_usb"
-    		 android:primary="true" />
+             android:storageDescription="@string/storage_sd_card"
+             android:primary="true"
+             android:removable="true" />
+    <storage android:mountPoint="/mnt/emmc"
+             android:storageDescription="@string/storage_usb"
+             android:primary="true"
+             android:removable="true"/>
+    <storage android:mountPoint="/mnt/fat"
+             android:storageDescription="@string/storage_usb"
+             android:primary="false"
+             android:removable="true"/>
 </StorageList>
