--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -567,8 +567,11 @@
          specified -->
     <string name="default_wallpaper_component" translatable="false">@null</string>
 
+    <!-- Component name of the service providing network location support. first priority -->
+    <string name="config_networkLocationProvider1" translatable="false">com.qualcomm.services.location.xtwifi.XTWiFiLocationProvider</string>
+
     <!-- Component name of the service providing network location support. -->
-    <string name="config_networkLocationProvider" translatable="false">com.google.android.location.NetworkLocationProvider</string>
+    <string name="config_networkLocationProvider2" translatable="false">com.google.android.location.NetworkLocationProvider</string>
 
     <!-- Component name of the service providing geocoder API support. -->
     <string name="config_geocodeProvider" translatable="false">com.google.android.location.GeocodeProvider</string>
