--- a/core/res/res/xml/storage_list.xml
+++ b/core/res/res/xml/storage_list.xml
@@ -38,13 +38,14 @@
     <storage android:mountPoint="/mnt/sdcard"
              android:storageDescription="@string/storage_sd_card"
              android:primary="true"
-             android:removable="true" />
+             android:removable="true"
+	     android:allowMassStorage="true"/>
     <storage android:mountPoint="/mnt/emmc"
              android:storageDescription="@string/storage_usb"
              android:primary="true"
              android:removable="true"/>
     <storage android:mountPoint="/mnt/fat"
              android:storageDescription="@string/storage_usb"
-             android:primary="false"
+             android:primary="true"
              android:removable="true"/>
 </StorageList>
