--- a/core/res/res/layout/twelve_key_entry.xml
+++ b/core/res/res/layout/twelve_key_entry.xml
@@ -23,7 +23,8 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="64dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginLeft="2dip"
         android:layout_marginRight="2dip"
         android:orientation="horizontal">
@@ -62,7 +63,8 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="64dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginLeft="2dip"
         android:layout_marginRight="2dip"
         android:orientation="horizontal">
@@ -100,7 +102,8 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="64dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginLeft="2dip"
         android:layout_marginRight="2dip"
         android:orientation="horizontal">
@@ -139,7 +142,8 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="64dip"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_marginLeft="2dip"
         android:layout_marginRight="2dip"
         android:orientation="horizontal">
