--- a/core/res/res/xml/storage_list.xml
+++ b/core/res/res/xml/storage_list.xml
@@ -43,7 +43,8 @@
     <storage android:mountPoint="/mnt/emmc"
              android:storageDescription="@string/storage_usb"
              android:primary="true"
-             android:removable="true"/>
+             android:removable="true"
+	     android:allowMassStorage="true"/>
     <storage android:mountPoint="/mnt/fat"
              android:storageDescription="@string/storage_usb"
              android:primary="true"
