--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -513,11 +513,13 @@
         <item>China Mobile</item>
         <item>China Unicom</item>
         <item>China Telecom</item>
+        <item>Searching for Service</item>
     </string-array>
 
     <string-array translatable="true" name="locale_carrier_names">
         <item>China_Mobile</item>
         <item>China_Unicom</item>
         <item>China_Telecom</item>
+        <item>roamingTextSearching</item>
     </string-array>
 </resources>
