CAF:QRD_AP:TELEPHONY:None:365373:Add ctwap default APN; fix CDMA data call will not choose user preferred APN issue in 8x25.
	Component Name: TELEPHONY
	Feature Name: None
	Fixed CRs: 365373
	Targets: msm8X25_sku5
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing: User can change default APN to their own preferred one by change desition in APN Settings UI.
	Peer Review:
	Reference Build or VU:
	Comments: emmetma
	(*commit tool - 1.2.0)

Change-Id: Ie47417fbf774bffb9fd128e0869996569c41af05

--- a/core/res/res/xml/apns.xml
+++ b/core/res/res/xml/apns.xml
@@ -36,6 +36,7 @@
     <apn carrier="China Mobile GPRS" apn="cmnet" mcc="460" mnc="07" user="" server="" password="" proxy="" port="" mmsproxy="" mmsport="" mmsc="" type="default"/>
     <apn carrier="China Mobile GPRS" apn="cmnet" mcc="460" mnc="07" user="" server="" password="" proxy="" port="" mmsproxy="" mmsport="" mmsc="" type="supl"/>
     <apn carrier="China Mobile" apn="cmwap" mcc="460" mnc="07" user="" server="" password="" proxy="10.0.0.172" port="80" mmsproxy="10.0.0.172" mmsport="80" mmsc="http://mmsc.monternet.com" type="mms"/>
+    <apn carrier="China Telecom" apn="ctwap" mcc="460" mnc="03" user="ctwap@mycdma.cn" server="" password="vnet.mobi" proxy="10.0.0.200" port="80" mmsproxy="" mmsport="" mmsc="" type="default" authtype="2"/>
     <apn carrier="China Telecom" apn="ctnet" mcc="460" mnc="03" user="ctnet@mycdma.cn" server="" password="vnet.mobi" proxy="" port="" mmsproxy="" mmsport="" mmsc="" type="default"/>
     <apn carrier="China Telecom" apn="ctnet" mcc="460" mnc="03" user="ctnet@mycdma.cn" server="" password="vnet.mobi" proxy="" port="" mmsproxy="" mmsport="" mmsc="" type="hipri"/>
     <apn carrier="China Telecom" apn="ctwap" mcc="460" mnc="03" user="ctwap@mycdma.cn" server="" password="vnet.mobi" proxy="10.0.0.200" port="80" mmsproxy="10.0.0.200" mmsport="80" mmsc="http://mmsc.vnet.mobi" type="mms" authtype="2"/>
