--- a/core/res/res/layout/keyguard_screen_password_portrait.xml
+++ b/core/res/res/layout/keyguard_screen_password_portrait.xml
@@ -24,7 +24,8 @@
     android:gravity="center_horizontal">
 
     <com.android.internal.widget.DigitalClock android:id="@+id/time"
-        android:layout_marginBottom="18dip"
+        android:layout_marginBottom="1dip"
+        android:layout_marginTop="-8dip"
         android:layout_marginRight="@dimen/keyguard_lockscreen_status_line_font_right_margin"
         android:layout_gravity="right">
 
@@ -37,7 +38,7 @@
             android:ellipsize="none"
             android:textSize="@dimen/keyguard_lockscreen_clock_font_size"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginBottom="6dip"
+            android:layout_marginBottom="3dip"
             android:textColor="@*android:color/lockscreen_clock_background"
             />
 
@@ -48,7 +49,7 @@
             android:ellipsize="none"
             android:textSize="@dimen/keyguard_lockscreen_clock_font_size"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginBottom="6dip"
+            android:layout_marginBottom="3dip"
             android:textColor="@color/lockscreen_clock_foreground"
             />
 
@@ -100,6 +101,7 @@
     <LinearLayout
         android:layout_gravity="center_vertical|fill_horizontal"
         android:orientation="horizontal"
+        android:layout_height="50dip"
         android:background="@drawable/lockscreen_password_field_dark"
         android:layout_marginLeft="16dip"
         android:layout_marginRight="16dip">
@@ -114,7 +116,7 @@
             android:singleLine="true"
             android:textStyle="normal"
             android:inputType="textPassword"
-            android:textSize="36sp"
+            android:textSize="25sp"
             android:background="@null"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#ffffffff"
@@ -152,8 +154,8 @@
         android:layout_width="match_parent"
         android:layout_marginLeft="4dip"
         android:layout_marginRight="4dip"
-        android:paddingTop="4dip"
-        android:paddingBottom="4dip"
+        android:paddingTop="2dip"
+        android:paddingBottom="2dip"
         android:background="#40000000"
         android:keyBackground="@*android:drawable/btn_keyboard_key_ics"
         android:visibility="gone"
@@ -176,7 +178,7 @@
         android:id="@+id/emergencyCallButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dip"
+        android:layout_marginTop="-2dip"
         android:layout_gravity="center_horizontal"
         android:drawableLeft="@*android:drawable/lockscreen_emergency_button"
         style="?android:attr/buttonBarButtonStyle"
