--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -30,6 +30,7 @@
     <integer name="def_screen_brightness">179</integer>
     <bool name="def_screen_brightness_automatic_mode">false</bool>
     <bool name="def_light_sensor_for_button_light">true</bool>
+    <integer name="def_button_light_bright_level">2</integer>
     <fraction name="def_window_animation_scale">100%</fraction>
     <fraction name="def_window_transition_scale">100%</fraction>
     <bool name="def_haptic_feedback">true</bool>
