--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -805,4 +805,5 @@
          [bootmode]:[original USB mode]:[USB mode used]-->
     <integer-array translatable="false" name="config_oemUsbModeOverride">
     </integer-array>
+    <bool name="config_enableFastPowerOn">true</bool>
 </resources>
