--- a/core/res/res/xml/storage_list.xml
+++ b/core/res/res/xml/storage_list.xml
@@ -37,16 +37,14 @@
     <!-- removable is not set in nosdcard product -->
     <storage android:mountPoint="/mnt/sdcard"
              android:storageDescription="@string/storage_sd_card"
-             android:primary="true"
+             android:primary="false"
              android:removable="true"
-	     android:allowMassStorage="true"/>
+             android:allowMassStorage="true"/>
     <storage android:mountPoint="/mnt/emmc"
              android:storageDescription="@string/storage_usb"
              android:primary="true"
-             android:removable="true"
-	     android:allowMassStorage="true"/>
+             android:allowMassStorage="true"/>
     <storage android:mountPoint="/mnt/fat"
              android:storageDescription="@string/storage_usb"
-             android:primary="true"
-             android:removable="true"/>
+             android:primary="false"/>
 </StorageList>
