--- a/core/res/res/layout/usb_storage_activity.xml
+++ b/core/res/res/layout/usb_storage_activity.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Copyright (c) 2012, Code Aurora Forum. All rights reserved.
+
+Licensed under the Apache License, Version 2.0 (the "License"); you
+may not use this file except in compliance with the License.  You may
+obtain a copy of the License at
+
+http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+implied.  See the License for the specific language governing
+permissions and limitations under the License.
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -17,28 +31,35 @@
     <TextView android:id="@+id/banner"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/icon"
-        android:layout_marginTop="10dip"
+        android:layout_marginTop="5dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:gravity="center"
         android:text="@string/usb_storage_title" />
 
-    <TextView android:id="@+id/message"
+    <ScrollView
         android:layout_below="@id/banner"
-        android:layout_marginTop="10dip"
+        android:fadeScrollbars="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:gravity="center"
-        android:text="@string/usb_storage_message" />
+        android:layout_height="90dip"
+        android:layout_marginTop="5dip"
+        >
+        <TextView android:id="@+id/message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="5dip"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:text="@string/usb_storage_message" />
+    </ScrollView>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dip"
+        android:layout_marginBottom="5dip"
         >
 
         <Button android:id="@+id/mount_button" 
